Implement tenant isolation and admin list enhancements