@@ -42,6 +42,7 @@ public class EvalService {
     private final ChatbotWorkflowNodeRepository workflowNodeRepository;
     private final ModelConfigRepository modelConfigRepository;
     private final EvalRunExecutor evalRunExecutor;
+    private final TenantService tenantService;
 
     public EvalService(EvalDatasetRepository evalDatasetRepository,
                        EvalCaseRepository evalCaseRepository,
@@ -50,7 +51,8 @@ public class EvalService {
                        ChatbotConfigRepository chatbotConfigRepository,
                        ChatbotWorkflowNodeRepository workflowNodeRepository,
                        ModelConfigRepository modelConfigRepository,
-                       EvalRunExecutor evalRunExecutor) {
+                       EvalRunExecutor evalRunExecutor,
+                       TenantService tenantService) {
         this.evalDatasetRepository = evalDatasetRepository;
         this.evalCaseRepository = evalCaseRepository;
         this.evalRunRepository = evalRunRepository;
@@ -59,18 +61,48 @@ public class EvalService {
         this.workflowNodeRepository = workflowNodeRepository;
         this.modelConfigRepository = modelConfigRepository;
         this.evalRunExecutor = evalRunExecutor;
+        this.tenantService = tenantService;
     }
 
     @Transactional(readOnly = true)
     public List<EvalDatasetResponse> listDatasets() {
-        return evalDatasetRepository.findAllByOrderByUpdatedAtDesc().stream().map(this::toDatasetResponse).toList();
+        return listDatasets(AdminListQuery.empty());
+        }
+
+        @Transactional(readOnly = true)
+        public List<EvalDatasetResponse> listDatasets(AdminListQuery query) {
+        return evalDatasetRepository.findByTenantIdOrderByUpdatedAtDesc(tenantService.currentTenantId()).stream()
+                .map(this::toDatasetResponse)
+            .collect(java.util.stream.Collectors.collectingAndThen(java.util.stream.Collectors.toList(),
+                datasets -> AdminListQuerySupport.apply(datasets, query, dataset -> matchesDatasetListQuery(dataset, query), datasetSorters(), "updatedAt")))
+            .stream()
+                .toList();
     }
+
+        private boolean matchesDatasetListQuery(EvalDatasetResponse dataset, AdminListQuery query) {
+        return AdminListQuerySupport.containsAny(query.search(), dataset.name(), dataset.description(), dataset.chatbotId())
+            && AdminListQuerySupport.contains(dataset.name(), query.value("name"))
+            && AdminListQuerySupport.contains(dataset.description(), query.value("description"))
+            && AdminListQuerySupport.equalsText(dataset.chatbotId(), query.value("chatbotId"));
+        }
+
+        private Map<String, java.util.function.Function<EvalDatasetResponse, ?>> datasetSorters() {
+        return Map.of(
+            "name", EvalDatasetResponse::name,
+            "description", EvalDatasetResponse::description,
+            "chatbotId", EvalDatasetResponse::chatbotId,
+            "createdAt", EvalDatasetResponse::createdAt,
+            "updatedAt", EvalDatasetResponse::updatedAt
+        );
+        }
 
     @Transactional
     public EvalDatasetResponse createDataset(EvalDatasetRequest request) {
-        ChatbotConfig chatbot = chatbotConfigRepository.findById(request.chatbotId())
+        String tenantId = tenantService.currentTenantId();
+        ChatbotConfig chatbot = chatbotConfigRepository.findByTenantIdAndId(tenantId, request.chatbotId())
             .orElseThrow(() -> new ResourceNotFoundException("Chatbot", request.chatbotId()));
         EvalDataset dataset = new EvalDataset();
+        dataset.setTenantId(tenantId);
         dataset.setName(request.name().strip());
         dataset.setDescription(request.description());
         dataset.setChatbot(chatbot);
@@ -79,8 +111,32 @@ public class EvalService {
 
     @Transactional(readOnly = true)
     public List<EvalCaseResponse> listCases(Long datasetId) {
+        return listCases(datasetId, AdminListQuery.empty());
+    }
+
+    @Transactional(readOnly = true)
+    public List<EvalCaseResponse> listCases(Long datasetId, AdminListQuery query) {
         requireDataset(datasetId);
-        return evalCaseRepository.findByDatasetIdOrderByIdAsc(datasetId).stream().map(this::toCaseResponse).toList();
+        List<EvalCaseResponse> cases = evalCaseRepository.findByDatasetIdOrderByIdAsc(datasetId).stream()
+                .map(this::toCaseResponse)
+                .toList();
+        return AdminListQuerySupport.apply(cases, query, evalCase -> matchesCaseListQuery(evalCase, query), caseSorters(), "id");
+    }
+
+    private boolean matchesCaseListQuery(EvalCaseResponse evalCase, AdminListQuery query) {
+        return AdminListQuerySupport.containsAny(query.search(), evalCase.id(), evalCase.input(), evalCase.expectedBehavior(),
+                evalCase.expectedKeywords())
+                && AdminListQuerySupport.contains(evalCase.input(), query.value("input"))
+                && AdminListQuerySupport.contains(evalCase.expectedBehavior(), query.value("expectedBehavior"))
+                && (query.value("keyword") == null || evalCase.expectedKeywords().stream().anyMatch(keyword -> AdminListQuerySupport.contains(keyword, query.value("keyword"))));
+    }
+
+    private Map<String, java.util.function.Function<EvalCaseResponse, ?>> caseSorters() {
+        return Map.of(
+                "id", EvalCaseResponse::id,
+                "input", EvalCaseResponse::input,
+                "expectedBehavior", EvalCaseResponse::expectedBehavior
+        );
     }
 
     @Transactional
@@ -98,12 +154,14 @@ public class EvalService {
     @Transactional
     public EvalRunResponse createRun(EvalRunRequest request) {
         EvalDataset dataset = requireDataset(request.datasetId());
-        ChatbotConfig chatbot = request.chatbotId() == null ? dataset.getChatbot() : chatbotConfigRepository.findById(request.chatbotId())
+        String tenantId = tenantService.currentTenantId();
+        ChatbotConfig chatbot = request.chatbotId() == null ? dataset.getChatbot() : chatbotConfigRepository.findByTenantIdAndId(tenantId, request.chatbotId())
             .orElseThrow(() -> new ResourceNotFoundException("Chatbot", request.chatbotId()));
-        ModelConfig model = request.modelId() == null ? defaultWorkflowModel(chatbot) : modelConfigRepository.findById(request.modelId())
+        ModelConfig model = request.modelId() == null ? defaultWorkflowModel(chatbot) : modelConfigRepository.findByProviderTenantIdAndId(tenantId, request.modelId())
             .orElseThrow(() -> new ResourceNotFoundException("Model", request.modelId()));
 
         EvalRun run = new EvalRun();
+        run.setTenantId(tenantId);
         run.setDataset(dataset);
         run.setChatbot(chatbot);
         run.setModel(model);
@@ -128,23 +186,49 @@ public class EvalService {
 
     @Transactional(readOnly = true)
     public EvalRunResponse getRun(Long id) {
-        return toRunResponse(evalRunRepository.findById(id)
+        return toRunResponse(evalRunRepository.findByTenantIdAndId(tenantService.currentTenantId(), id)
                 .orElseThrow(() -> new ResourceNotFoundException("Eval run", id)));
     }
 
     @Transactional(readOnly = true)
     public List<EvalResultResponse> listResults(Long runId) {
+        return listResults(runId, AdminListQuery.empty());
+    }
+
+    @Transactional(readOnly = true)
+    public List<EvalResultResponse> listResults(Long runId, AdminListQuery query) {
         requireRun(runId);
-        return evalResultRepository.findByRunIdOrderByIdAsc(runId).stream().map(this::toResultResponse).toList();
+        List<EvalResultResponse> results = evalResultRepository.findByRunIdOrderByIdAsc(runId).stream()
+                .map(this::toResultResponse)
+                .toList();
+        return AdminListQuerySupport.apply(results, query, result -> matchesResultListQuery(result, query), resultSorters(), "id");
+    }
+
+    private boolean matchesResultListQuery(EvalResultResponse result, AdminListQuery query) {
+        return AdminListQuerySupport.containsAny(query.search(), result.id(), result.caseId(), result.output(), result.error(),
+                result.passed() ? "passed" : "failed")
+                && AdminListQuerySupport.contains(result.output(), query.value("output"))
+                && AdminListQuerySupport.contains(result.error(), query.value("error"))
+                && AdminListQuerySupport.equalsBoolean(result.passed(), query.booleanValue("passed"));
+    }
+
+    private Map<String, java.util.function.Function<EvalResultResponse, ?>> resultSorters() {
+        return Map.of(
+                "id", EvalResultResponse::id,
+                "caseId", EvalResultResponse::caseId,
+                "passed", EvalResultResponse::passed,
+                "output", EvalResultResponse::output,
+                "error", EvalResultResponse::error
+        );
     }
 
     private EvalDataset requireDataset(Long id) {
-        return evalDatasetRepository.findById(id)
+        return evalDatasetRepository.findByTenantIdAndId(tenantService.currentTenantId(), id)
                 .orElseThrow(() -> new ResourceNotFoundException("Eval dataset", id));
     }
 
     private EvalRun requireRun(Long id) {
-        return evalRunRepository.findById(id)
+        return evalRunRepository.findByTenantIdAndId(tenantService.currentTenantId(), id)
                 .orElseThrow(() -> new ResourceNotFoundException("Eval run", id));
     }
 
