@@ -9,6 +9,7 @@ import com.xiangxik.echat.chatbot.service.llm.LlmProviderClient;
 import com.xiangxik.echat.chatbot.service.llm.LlmProviderClientRegistry;
 import com.xiangxik.echat.chatbot.service.llm.LlmProviderTestResult;
 import java.util.List;
+import java.util.Map;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
@@ -20,19 +21,56 @@ public class ProviderConfigService {
     private final ApiKeyProtector apiKeyProtector;
     private final LlmProviderClientRegistry clientRegistry;
     private final AuditLogService auditLogService;
+    private final TenantService tenantService;
 
     public ProviderConfigService(ProviderConfigRepository providerConfigRepository, ApiKeyProtector apiKeyProtector,
-                                 LlmProviderClientRegistry clientRegistry, AuditLogService auditLogService) {
+                                 LlmProviderClientRegistry clientRegistry, AuditLogService auditLogService,
+                                 TenantService tenantService) {
         this.providerConfigRepository = providerConfigRepository;
         this.apiKeyProtector = apiKeyProtector;
         this.clientRegistry = clientRegistry;
         this.auditLogService = auditLogService;
+        this.tenantService = tenantService;
     }
 
     @Transactional(readOnly = true)
     public List<ProviderConfigResponse> list() {
-        return providerConfigRepository.findAll().stream().map(this::toResponse).toList();
+        return list(AdminListQuery.empty());
+        }
+
+        @Transactional(readOnly = true)
+        public List<ProviderConfigResponse> list(AdminListQuery query) {
+        return providerConfigRepository.findByTenantIdOrderByNameAsc(tenantService.currentTenantId()).stream()
+                .map(this::toResponse)
+            .filter(provider -> matchesListQuery(provider, query))
+            .collect(java.util.stream.Collectors.collectingAndThen(java.util.stream.Collectors.toList(),
+                providers -> AdminListQuerySupport.apply(providers, query, provider -> true, providerSorters(), "name")))
+            .stream()
+                .toList();
     }
+
+        private boolean matchesListQuery(ProviderConfigResponse provider, AdminListQuery query) {
+        return AdminListQuerySupport.containsAny(query.search(), provider.name(), provider.tenantId(), provider.type(),
+            provider.baseUrl(), provider.enabled() ? "enabled" : "disabled", provider.hasApiKey() ? "stored" : "not set")
+            && AdminListQuerySupport.contains(provider.name(), query.value("name"))
+            && AdminListQuerySupport.contains(provider.tenantId(), query.value("tenantId"))
+            && AdminListQuerySupport.contains(provider.baseUrl(), query.value("baseUrl"))
+            && AdminListQuerySupport.equalsText(provider.type(), query.value("type"))
+            && AdminListQuerySupport.equalsBoolean(provider.enabled(), query.booleanValue("enabled"))
+            && AdminListQuerySupport.equalsBoolean(provider.hasApiKey(), query.booleanValue("hasApiKey"));
+        }
+
+        private Map<String, java.util.function.Function<ProviderConfigResponse, ?>> providerSorters() {
+        return Map.of(
+            "tenantId", ProviderConfigResponse::tenantId,
+            "name", ProviderConfigResponse::name,
+            "type", ProviderConfigResponse::type,
+            "baseUrl", ProviderConfigResponse::baseUrl,
+            "hasApiKey", ProviderConfigResponse::hasApiKey,
+            "enabled", ProviderConfigResponse::enabled,
+            "updatedAt", ProviderConfigResponse::updatedAt
+        );
+        }
 
     @Transactional(readOnly = true)
     public ProviderConfigResponse get(Long id) {
@@ -42,6 +80,7 @@ public class ProviderConfigService {
     @Transactional
     public ProviderConfigResponse create(ProviderConfigRequest request) {
         ProviderConfig providerConfig = new ProviderConfig();
+        providerConfig.setTenantId(tenantService.currentTenantId());
         apply(providerConfig, request);
         ProviderConfig saved = providerConfigRepository.save(providerConfig);
         auditLogService.recordAdmin("PROVIDER_CREATED", "ProviderConfig", saved.getId(), auditMetadata(saved));
@@ -79,7 +118,7 @@ public class ProviderConfigService {
     }
 
     private ProviderConfig find(Long id) {
-        return providerConfigRepository.findById(id)
+        return providerConfigRepository.findByTenantIdAndId(tenantService.currentTenantId(), id)
                 .orElseThrow(() -> new ResourceNotFoundException("ProviderConfig", id));
     }
 
@@ -101,6 +140,7 @@ public class ProviderConfigService {
                 || StringUtils.hasText(providerConfig.getApiKeySecretRef());
         return new ProviderConfigResponse(
                 providerConfig.getId(),
+            providerConfig.getTenantId(),
                 providerConfig.getName(),
                 providerConfig.getType(),
                 providerConfig.getBaseUrl(),
@@ -115,6 +155,7 @@ public class ProviderConfigService {
     private java.util.Map<String, Object> auditMetadata(ProviderConfig providerConfig) {
         return java.util.Map.of(
                 "name", providerConfig.getName(),
+                "tenantId", providerConfig.getTenantId(),
                 "type", providerConfig.getType().name(),
                 "enabled", providerConfig.isEnabled(),
                 "hasApiKey", StringUtils.hasText(providerConfig.getEncryptedApiKey())
